Updated the examples for the new conversions file structure

--- a/docs/gallery/get_spiral_example.ipynb
+++ b/docs/gallery/get_spiral_example.ipynb
@@ -41,14 +41,10 @@
     }
    ],
    "source": [
-    "from snowxsql.functions import raster_to_rasterio\n",
     "from snowxsql.db import get_db\n",
-    "from snowxsql.functions import raster_to_rasterio\n",
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import LayerData, RasterData, PointData\n",
-    "from snowxsql.functions import ST_Clip, points_to_geopandas\n",
+    "from snowxsql.data import LayerData, PointData\n",
+    "from snowxsql.conversions import points_to_geopandas\n",
     "import geoalchemy2.functions as gfunc\n",
-    "from geoalchemy2.shape import to_shape\n",
     "import geopandas as gpd\n",
     "\n",
     "# PIT Site Identifier\n",
