--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -12,10 +12,8 @@
     "\n",
     "1. Use the `LayerData` class to represent the entire layers table\n",
     "2. Form the query using Objet Relational Mapping (ORM)\n",
-    "3. Fill out all variables in the query using compile. \n",
-    "4. Form a geodataframe using the engine and complete SQL command\n",
-    "5. Output to a file.\n",
-    "\n"
+    "3. Use the conversion function from snowxsql to get a geodataframe\n",
+    "5. Plot it!"
    ]
   },
   {
@@ -26,6 +24,7 @@
    "source": [
     "from snowxsql.data import LayerData\n",
     "from snowxsql.db import get_db\n",
+    "from snowxsql.conversions import query_to_geopandas\n",
     "import geopandas as gpd\n",
     "from sqlalchemy.dialects import postgresql\n",
     "\n",
@@ -36,17 +35,14 @@
     "# Query the database looking at LayerData, filter on comments containing graupel (case insensitive)\n",
     "q = session.query(LayerData).filter(LayerData.comments.contains('graupel'))\n",
     "\n",
-    "# Fill out the variables in the query\n",
-    "sql = q.statement.compile(dialect=postgresql.dialect())\n",
-    "\n",
-    "# Get dataframe from geopandas using the query and engine\n",
-    "df = gpd.GeoDataFrame.from_postgis(sql, engine)\n",
+    "# Convert the \n",
+    "df = query_to_geopandas(q, engine)\n",
     "\n",
     "# Close the geoalchemy2 session\n",
     "session.close()\n",
     "\n",
     "# Write data to a shapefile\n",
-    "df['geom'].to_file('graupel_locations.shp')\n"
+    "# df['geom'].to_file('graupel_locations.shp')\n"
    ]
   },
   {
@@ -61,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f27789b0cd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f60d60d09d0>"
       ]
      },
      "execution_count": 5,
