Foudn out the correct way to use ST_Union without overriding ST_Union for Geometry. Added a little extra blurb about adding tags to documenting jupyter notebooks

--- a/docs/gallery/raster_union_and_more_example.ipynb
+++ b/docs/gallery/raster_union_and_more_example.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,12 @@
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "import geoalchemy2.functions as gfunc\n",
+    "from geoalchemy2.types import Raster\n",
     "from geoalchemy2.shape import to_shape\n",
     "import geopandas as gpd\n",
     "from snowxsql.conversions import raster_to_rasterio\n",
-    "from snowxsql.functions import ST_RasterUnion\n",
     "from snowxsql.conversions import points_to_geopandas, query_to_geopandas\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "# PIT Site Identifier\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grab all rasters touching the circle, form a single raster, convert to tiff\n",
-    "rasters = session.query(func.ST_AsTiff(ST_RasterUnion(RasterData.raster))).filter(gfunc.ST_Intersects(RasterData.raster, buffered_pit)).all()"
+    "# Grab the rasters touching the circle, form a single raster, convert to tiff\n",
+    "rasters = session.query(func.ST_AsTiff(func.ST_Union(RasterData.raster, type_=Raster))).filter(gfunc.ST_Intersects(RasterData.raster, buffered_pit)).all()\n",
+    "\n",
+    "# Note we have to past the datatype here because geoalchemy has ST_Union defined for geometry and not rasters. This way its handled as a raster."
    ]
   },
   {
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "nbsphinx-thumbnail",
