Updating raster example

--- a/docs/gallery/raster_union_and_more_example.ipynb
+++ b/docs/gallery/raster_union_and_more_example.ipynb
@@ -23,17 +23,17 @@
    "metadata": {},
    "source": [
     "## Process\n",
-    "### Step 1:"
+    "### Step 1: Get our desired pit location from the SiteData table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from snowxsql.db import get_db\n",
-    "from snowxsql.data import RasterData, LayerData\n",
+    "from snowxsql.data import RasterData, SiteData\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "import geoalchemy2.functions as gfunc\n",
@@ -45,7 +45,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# PIT Site Identifier\n",
+    "# Pit Site Identifier of interest\n",
     "site_id = '5N19'\n",
     "\n",
     "# Distance around the pit to collect data in meters\n",
@@ -56,39 +56,25 @@
     "engine, metadata, session = get_db(db_name)\n",
     "datasets = []\n",
     "\n",
-    "# Grab our pit layers by site id and where hand hardnesssamples were taken (e.g. pits)\n",
-    "q = session.query(LayerData).filter(LayerData.site_id==site_id).filter(LayerData.type=='hand_hardness')\n",
-    "layers = q.all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Grab our sites details by site id\n",
+    "q = session.query(SiteData).filter(SiteData.site_id==site_id)\n",
+    "sites = q.all()\n",
+    "\n",
     "# Grab the pit location from a single layer\n",
-    "p = layers[0].geom\n",
+    "p = sites[0].geom\n",
+    "\n",
+    "# Convert the point to a pyshapely\n",
     "pit = to_shape(p)\n",
     "\n",
-    "# Create a polygon buffered by our distance centered on the pit\n",
-    "q = session.query(gfunc.ST_Buffer(p, buffer_dist))\n",
-    "buffered_pit = q.all()[0][0]\n",
-    "circle = to_shape(buffered_pit)"
+    "# Convert it to a geopandas dataframe for easy plotting \n",
+    "df_pit = gpd.GeoSeries(pit)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3:"
+    "### Step 2: Create a circle with radius of 400m centered on our pit"
    ]
   },
   {
@@ -97,17 +83,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grab the rasters touching the circle, form a single raster, convert to tiff\n",
-    "rasters = session.query(func.ST_AsTiff(func.ST_Union(RasterData.raster, type_=Raster))).filter(gfunc.ST_Intersects(RasterData.raster, buffered_pit)).all()\n",
+    "# Create a polygon buffered by our distance centered on the pit\n",
+    "q = session.query(gfunc.ST_Buffer(p, buffer_dist))\n",
+    "buffered_pit = q.all()[0][0]\n",
     "\n",
-    "# Note we have to past the datatype here because geoalchemy has ST_Union defined for geometry and not rasters. This way its handled as a raster."
+    "# Convert to a shapely shapefile object \n",
+    "circle = to_shape(buffered_pit)\n",
+    "\n",
+    "# Convert to a geopandas dataframe\n",
+    "df_circle = gpd.GeoSeries(circle)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4:"
+    "### Step 3: Union all Bare Earth DEM tiles touching our buffer circle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot convert 'NoneType' object to bytes",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-69b1e414801d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Get the rasterio object of the raster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraster_to_rasterio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrasters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/projects/snowex/SnowEx2020_SQLcode/snowxsql/conversions.py\u001b[0m in \u001b[0;36mraster_to_rasterio\u001b[0;34m(session, rasters)\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0mdatasets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrasters\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m         \u001b[0mbdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mMemoryFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtmpfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot convert 'NoneType' object to bytes"
+     ]
+    }
+   ],
+   "source": [
+    "# Grab the rasters, union them and convert them as tiff when done\n",
+    "q = session.query(func.ST_AsTiff(func.ST_Union(RasterData.raster, type_=Raster)))\n",
+    "\n",
+    "# Only grab rasters that are the bare earth DEM from QSI\n",
+    "q = q.filter(RasterData.type == 'bare_earth_digital_elevation_models')\n",
+    "\n",
+    "# And grab rasters touching the circle\n",
+    "q = q.filter(gfunc.ST_Intersects(RasterData.raster, buffered_pit))\n",
+    "\n",
+    "# Execute the query\n",
+    "rasters = q.all()\n",
+    "\n",
+    "# Get the rasterio object of the raster\n",
+    "dataset = raster_to_rasterio(session, rasters)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Grab all site locations in the circle"
    ]
   },
   {
@@ -116,8 +149,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a geopandas df of layers geometry in the circle\n",
-    "q = session.query(LayerData.geom).filter(gfunc.ST_Within(LayerData.geom, buffered_pit))\n",
+    "# Form a query for retrieving the sites that are within the circle\n",
+    "q = session.query(SiteData.geom).filter(gfunc.ST_Within(SiteData.geom, buffered_pit))\n",
+    "\n",
+    "# Create a geopandas dataframe of SiteData geometry in the circle\n",
     "nearby_pits = query_to_geopandas(q, engine)"
    ]
   },
@@ -125,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5: "
+    "### Step 5: Plot the dem, with the pits overlaid. "
    ]
   },
   {
@@ -152,34 +187,38 @@
     }
    ],
    "source": [
+    "# Create a single plot to add everything to\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "dataset = raster_to_rasterio(session, rasters)[0]\n",
+    "# Plot the DEM \n",
     "img = show(dataset.read(1), ax=ax, transform=dataset.transform, cmap='terrain')\n",
-    "show(dataset.read(1), contour=True, levels=[s for s in np.arange(3000,4000, 10)], colors='dimgray', ax=ax, transform=dataset.transform)\n",
     "\n",
-    "gpd.GeoSeries(circle).plot(ax=ax, color='b', alpha=0.4)\n",
+    "# Plot the contours of the DEM (Just for kicks!) at 10m intervals\n",
+    "show(dataset.read(1), contour=True, levels=[s for s in np.arange(3000, 4000, 10)], colors='dimgray', ax=ax, transform=dataset.transform)\n",
     "\n",
+    "# Plot the circle as blue with slight transparency\n",
+    "df_circle.plot(ax=ax, color='b', alpha=0.4)\n",
+    "\n",
+    "# Plot the nearby pits as purple triangles\n",
     "nearby_pits.plot(ax=ax, color='purple', marker='^', label='Nearby Pits')\n",
     "\n",
-    "gpd.GeoSeries(pit).plot(ax=ax, color='r', marker='^', label=site_id)\n",
+    "# Plot pit as a red triangle\n",
+    "df_pit.plot(ax=ax, color='r', marker='^', label=site_id)\n",
+    "\n",
+    "# Don't use scientific notation on the axis ticks\n",
     "ax.ticklabel_format(style='plain', useOffset=False)\n",
+    "\n",
+    "# Add x/y labels, a title, a legend and avoid overlapping labels\n",
     "ax.set_xlabel('Easting [m]')\n",
     "ax.set_ylabel('Northing [m]')\n",
     "ax.set_title('Pit {} w/ {}m Radius Circle on QSI DEM'.format(site_id, buffer_dist))\n",
-    "plt.tight_layout()\n",
     "ax.legend()\n",
+    "plt.tight_layout()\n",
     "\n",
+    "# Close the dataset and end the database session\n",
     "dataset.close()\n",
     "session.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
