Reworked the DB name to force users to use postgres dialect and psycopg2 as the driver. Now users only supply the database name

--- a/docs/gallery/plot_pit_swe_example.ipynb
+++ b/docs/gallery/plot_pit_swe_example.ipynb
@@ -47,7 +47,7 @@
     "from geoalchemy2.shape import to_shape\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "\n",
     "# Grab all the unique site names\n",
