--- a/docs/gallery/compare_SSA_instruments_example.ipynb
+++ b/docs/gallery/compare_SSA_instruments_example.ipynb
@@ -36,7 +36,7 @@
     "import pandas as pd\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "\n",
     "# Grab all the equivalent diameter profiles\n",
