--- a/docs/gallery/get_spiral_example.ipynb
+++ b/docs/gallery/get_spiral_example.ipynb
@@ -53,7 +53,7 @@
     "buffer_dist = 50\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "\n",
     "# Grab our pit location by provided site id from the site details table\n",
