--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -44,7 +44,7 @@
     "import matplotlib.pyplot as plt \n",
     "\n",
     "# Connect to the database\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "\n",
     "# Build a query looking at hand hardness profiles, \n",
