--- a/docs/gallery/graupel_smp_example.ipynb
+++ b/docs/gallery/graupel_smp_example.ipynb
@@ -24,7 +24,7 @@
     "# Site ID\n",
     "site = '5S21'\n",
     "# Connect to the database we made.\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "\n",
     "# Query the database looking at Pit profiles, \n",
