--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -60,7 +60,7 @@
     "site_id = '5S31'\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "datasets = []\n",
     "\n",
