--- a/docs/gallery/raster_union_and_more_example.ipynb
+++ b/docs/gallery/raster_union_and_more_example.ipynb
@@ -52,7 +52,7 @@
     "buffer_dist = 400\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'postgresql+psycopg2:///snowex'\n",
+    "db_name = 'snowex'\n",
     "engine, metadata, session = get_db(db_name)\n",
     "datasets = []\n",
     "\n",
