Reworked get_db to not always return the metatadata object to avoid confusion between the db metadata table and the metadata classes for files

--- a/docs/gallery/compare_SSA_instruments_example.ipynb
+++ b/docs/gallery/compare_SSA_instruments_example.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "# Connect to the database we made.\n",
     "db_name = 'snowex'\n",
-    "engine, metadata, session = get_db(db_name)\n",
+    "engine, session = get_db(db_name)\n",
     "\n",
     "# Grab all the equivalent diameter profiles\n",
     "ssa = session.query(LayerData).filter(LayerData.type == 'specific_surface_area').all()\n",
