--- a/docs/gallery/graupel_smp_example.ipynb
+++ b/docs/gallery/graupel_smp_example.ipynb
@@ -25,7 +25,7 @@
     "site = '5S21'\n",
     "# Connect to the database we made.\n",
     "db_name = 'snowex'\n",
-    "engine, metadata, session = get_db(db_name)\n",
+    "engine, session = get_db(db_name)\n",
     "\n",
     "# Query the database looking at Pit profiles, \n",
     "q = session.query(LayerData).filter(LayerData.type == 'force').filter(LayerData.site_id==site)\n",
