--- a/docs/gallery/plot_pit_swe_example.ipynb
+++ b/docs/gallery/plot_pit_swe_example.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "# Connect to the database we made.\n",
     "db_name = 'snowex'\n",
-    "engine, metadata, session = get_db(db_name)\n",
+    "engine, session = get_db(db_name)\n",
     "\n",
     "# Grab all the unique site names\n",
     "sites = set([s[0] for s in session.query(LayerData.site_id).all()])\n",
