--- a/docs/gallery/get_spiral_example.ipynb
+++ b/docs/gallery/get_spiral_example.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "# Connect to the database we made.\n",
     "db_name = 'snowex'\n",
-    "engine, metadata, session = get_db(db_name)\n",
+    "engine, session = get_db(db_name)\n",
     "\n",
     "# Grab our pit location by provided site id from the site details table\n",
     "q = session.query(SiteData).filter(SiteData.site_id == site_id)\n",
