--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "# Connect to the database\n",
     "db_name = 'snowex'\n",
-    "engine, metadata, session = get_db(db_name)\n",
+    "engine, session = get_db(db_name)\n",
     "\n",
     "# Build a query looking at hand hardness profiles, \n",
     "q_base = session.query(LayerData).filter(LayerData.type == 'hand_hardness')\n",
