--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "# Connect to the database we made.\n",
     "db_name = 'snowex'\n",
-    "engine, metadata, session = get_db(db_name)\n",
+    "engine, session = get_db(db_name)\n",
     "datasets = []\n",
     "\n",
     "# Grab our pit layers by site id\n",
