Rename RasterData to ImageData to be more consistent with the database names. The database cannot have a raster table due to a keyword conflict for postgres

--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -46,7 +46,7 @@
    ],
    "source": [
     "from snowxsql.db import get_db\n",
-    "from snowxsql.data import RasterData, LayerData\n",
+    "from snowxsql.data import ImageData, LayerData\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "import geoalchemy2.functions as gfunc\n",
@@ -73,7 +73,7 @@
     "p_shp = to_shape(p)\n",
     "\n",
     "print('Grabbing rasters that overlap on the point {}'.format(p_shp))\n",
-    "rasters = session.query(func.ST_AsTiff(RasterData.raster)).filter(gfunc.ST_Intersects(RasterData.raster, p)).all()\n",
+    "rasters = session.query(func.ST_AsTiff(ImageData.raster)).filter(gfunc.ST_Intersects(ImageData.raster, p)).all()\n",
     "\n",
     "fig,ax = plt.subplots()\n",
     "ax.ticklabel_format(style='plain', useOffset=False)\n",
