--- a/docs/gallery/raster_union_and_more_example.ipynb
+++ b/docs/gallery/raster_union_and_more_example.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "from snowxsql.db import get_db\n",
-    "from snowxsql.data import RasterData, SiteData\n",
+    "from snowxsql.data import ImageData, SiteData\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "import geoalchemy2.functions as gfunc\n",
@@ -121,13 +121,13 @@
    ],
    "source": [
     "# Grab the rasters, union them and convert them as tiff when done\n",
-    "q = session.query(func.ST_AsTiff(func.ST_Union(RasterData.raster, type_=Raster)))\n",
+    "q = session.query(func.ST_AsTiff(func.ST_Union(ImageData.raster, type_=Raster)))\n",
     "\n",
     "# Only grab rasters that are the bare earth DEM from QSI\n",
-    "q = q.filter(RasterData.type == 'bare_earth_digital_elevation_models')\n",
+    "q = q.filter(ImageData.type == 'bare_earth_digital_elevation_models')\n",
     "\n",
     "# And grab rasters touching the circle\n",
-    "q = q.filter(gfunc.ST_Intersects(RasterData.raster, buffered_pit))\n",
+    "q = q.filter(gfunc.ST_Intersects(ImageData.raster, buffered_pit))\n",
     "\n",
     "# Execute the query\n",
     "rasters = q.all()\n",
