Fixed tags being overprescribed to juptyer notebooks breaking the thumbnails.

--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -142,7 +142,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
    "outputs": [],
    "source": []
   }
