A couple more missing tags that were needed to fix the gallery thumbnail

--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -85,11 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "nbsphinx-thumbnail"
-    ]
-   },
+   "metadata": {},
    "source": [
     "### Step 3: Plot pits with graupel in color and without in grey "
    ]
@@ -99,7 +95,8 @@
    "execution_count": 24,
    "metadata": {
     "tags": [
-     "nbsphinx-thumbnail"
+     "nbsphinx-thumbnail",
+     "nbsphinx-gallery"
     ]
    },
    "outputs": [
