For jupyter notebooks: 1.Updated some comments, 2. double checked all jupyter noteooks run, 3. Improved readability

--- a/docs/gallery/compare_depth_maps_example.ipynb
+++ b/docs/gallery/compare_depth_maps_example.ipynb
@@ -37,7 +37,7 @@
     "from geoalchemy2.types import Raster\n",
     "from geoalchemy2.shape import to_shape, from_shape\n",
     "import geopandas as gpd\n",
-    "from snowxsql.conversions import raster_to_rasterio, points_to_geopandas, query_to_geopandas, crop, resample\n",
+    "from snowxsql.conversions import raster_to_rasterio, points_to_geopandas, query_to_geopandas\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from shapely.geometry import Polygon\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "nbsphinx-gallery",
