--- a/docs/gallery/getting_started_example.ipynb
+++ b/docs/gallery/getting_started_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6C34, 1C7, 2N48, 2S9, 9N39, Skyway Open, 2S27, 8N54, 1S1, 2C4, 6N46, 5S42, 2S11, 5N11, 7N40, 1S13, 5N10, 9S40, 8N37, 2S10, County Line Tree, FL2A, 2S36, 2S16, 5C27, 4N27, 6S26, 8C35, 9N43, County Line Tree, 5N24, 8N9, 6S19, 2N21, 8C25, 8N45, 5S43, 2C2, Skyway Tree, 5C20, 9N44, 3N26, 2S48, 9N47, 9C17, 8C22, 2N14, 8N38, 3S33, 8N25, 8C18, 8C31, 8S28, 8C32, 8N51, 6C10, 6N17, 6S32, 4C30, 5N10, 5S24, 8N58, 6N31, 2N8, 1N20, 1C1, 2S7, 1N7, 8S30, 1S8, 8S41, 9N42, 3N53, 2S35, FL1B, 6S22, 6S53, 1N1, 8N33, 1N5, 2N12, TLSFL2A, 5S49, 8N52, 8C29, 4N2, 3S14, 8C36, 9N56, 7N57, 2N49, County Line Tree, 9N59, 1C8, 2N13, 1N6, 2S46, 2C9, 7C15, Skyway Tree, 3S5, 6S34, 5N15, 9C23, 9C19, 5N50, 9N28, 2S45, Lodge, County Line Open, 5S31, 3S38, 1S17, 8S18, 8C11, Skyway Open, 1C1, 2C3, 7S50, 5N32, 2S25, 5N19, 9C16, 8N35, Skyway Open, 9S51, 9N30, 1N23, 1S12, 2C12, 7S23, 1C5, 6N36, 1C14, 2C6, Skyway Tree, County Line Open, 5N41, 1N3, 2S4, 9N29, 8C26, 1S2, 9S39, 3S52, 6N16, 2S37, 5C21, 2C13, 2S6, 5S21, 6S44, 6S15, 3S47, 3N22, 6C37, 6C24, 6N18, 8N34, 5S29, Skyway Open, 8N55, 2S20, 2S3, 2N4, 2C33, 9C28\n",
+      "2S46, 8C31, 9N43, 4N27, 2S9, 8N45, 1S13, 8C18, 9N30, 2C3, 1S17, 8C29, 6C10, 4C30, 1S2, 2C12, 7N57, 1C5, 2N12, 9N47, 5N15, 6S34, 9S51, 1S8, 3S14, 3S38, 8C35, 6N18, Skyway Tree, 2C13, 5S31, County Line Tree, 5S24, 5N50, 6N16, 5S42, 8N35, 6C24, 5S43, 8N9, 9C28, 2S7, 6S15, 1N5, 7N40, 6N17, 1N7, 2N49, 8C11, 9N44, Lodge, 2S36, 1N1, 8N25, 2C6, 2S20, 6N31, 6N36, County Line Tree, 8N33, 1C7, 8S28, 8N51, 5N32, 5S21, 5C20, 2N4, 6S44, 1C8, 5N10, County Line Open, 2N13, 2C33, 1N23, 2S25, 9N28, 8C36, 2S48, 1N6, 2C9, Skyway Tree, 1C1, Skyway Open, 9N29, 3S33, 2S37, 2S45, 2S4, 1N20, 2S11, 2N14, 5S49, 9S40, 5S29, 4N2, 5N11, 8N55, 9N56, 1S1, 9S39, 5N24, 6C34, Skyway Tree, 9N42, 1C14, 9C23, 5N10, 5N19, 8C25, 8C22, 3N53, 8N58, TLSFL2A, 9N39, 2S35, 1C1, 6S26, 2S6, 6S22, Skyway Open, 8N52, 3N22, 7S50, 2N21, 8N37, 2C4, Skyway Open, 6S53, 8C32, 9N59, 3S47, 5N41, 5C27, Skyway Open, 7C15, 9C19, County Line Tree, 3S5, 5C21, 6S32, 3S52, 2S27, 2S10, County Line Open, 8S41, 3N26, 7S23, 2S16, 9C17, 8N38, 2S3, 6C37, 6S19, 2N8, FL2A, 2N48, 8C26, 1N3, 8S18, FL1B, 8S30, 1S12, 6N46, 8N54, 8N34, 2C2, 9C16\n",
       "\n"
      ]
     }
@@ -54,7 +54,7 @@
     "conn = engine.connect()\n",
     "\n",
     "# Form a typical SQL query and use python to populate the table name\n",
-    "qry = \"SELECT site_id FROM sites\".format(table)\n",
+    "qry = \"SELECT site_id FROM sites\"\n",
     "\n",
     "# Then we execute the sql command and collect the results\n",
     "results = conn.execute(qry)\n",
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6C34, 1C7, 2N48, 2S9, 9N39, Skyway Open, 2S27, 8N54, 1S1, 2C4, 6N46, 5S42, 2S11, 5N11, 7N40, 1S13, 5N10, 9S40, 8N37, 2S10, County Line Tree, FL2A, 2S36, 2S16, 5C27, 4N27, 6S26, 8C35, 9N43, County Line Tree, 5N24, 8N9, 6S19, 2N21, 8C25, 8N45, 5S43, 2C2, Skyway Tree, 5C20, 9N44, 3N26, 2S48, 9N47, 9C17, 8C22, 2N14, 8N38, 3S33, 8N25, 8C18, 8C31, 8S28, 8C32, 8N51, 6C10, 6N17, 6S32, 4C30, 5N10, 5S24, 8N58, 6N31, 2N8, 1N20, 1C1, 2S7, 1N7, 8S30, 1S8, 8S41, 9N42, 3N53, 2S35, FL1B, 6S22, 6S53, 1N1, 8N33, 1N5, 2N12, TLSFL2A, 5S49, 8N52, 8C29, 4N2, 3S14, 8C36, 9N56, 7N57, 2N49, County Line Tree, 9N59, 1C8, 2N13, 1N6, 2S46, 2C9, 7C15, Skyway Tree, 3S5, 6S34, 5N15, 9C23, 9C19, 5N50, 9N28, 2S45, Lodge, County Line Open, 5S31, 3S38, 1S17, 8S18, 8C11, Skyway Open, 1C1, 2C3, 7S50, 5N32, 2S25, 5N19, 9C16, 8N35, Skyway Open, 9S51, 9N30, 1N23, 1S12, 2C12, 7S23, 1C5, 6N36, 1C14, 2C6, Skyway Tree, County Line Open, 5N41, 1N3, 2S4, 9N29, 8C26, 1S2, 9S39, 3S52, 6N16, 2S37, 5C21, 2C13, 2S6, 5S21, 6S44, 6S15, 3S47, 3N22, 6C37, 6C24, 6N18, 8N34, 5S29, Skyway Open, 8N55, 2S20, 2S3, 2N4, 2C33, 9C28\n",
+      "2S46, 8C31, 9N43, 4N27, 2S9, 8N45, 1S13, 8C18, 9N30, 2C3, 1S17, 8C29, 6C10, 4C30, 1S2, 2C12, 7N57, 1C5, 2N12, 9N47, 5N15, 6S34, 9S51, 1S8, 3S14, 3S38, 8C35, 6N18, Skyway Tree, 2C13, 5S31, County Line Tree, 5S24, 5N50, 6N16, 5S42, 8N35, 6C24, 5S43, 8N9, 9C28, 2S7, 6S15, 1N5, 7N40, 6N17, 1N7, 2N49, 8C11, 9N44, Lodge, 2S36, 1N1, 8N25, 2C6, 2S20, 6N31, 6N36, County Line Tree, 8N33, 1C7, 8S28, 8N51, 5N32, 5S21, 5C20, 2N4, 6S44, 1C8, 5N10, County Line Open, 2N13, 2C33, 1N23, 2S25, 9N28, 8C36, 2S48, 1N6, 2C9, Skyway Tree, 1C1, Skyway Open, 9N29, 3S33, 2S37, 2S45, 2S4, 1N20, 2S11, 2N14, 5S49, 9S40, 5S29, 4N2, 5N11, 8N55, 9N56, 1S1, 9S39, 5N24, 6C34, Skyway Tree, 9N42, 1C14, 9C23, 5N10, 5N19, 8C25, 8C22, 3N53, 8N58, TLSFL2A, 9N39, 2S35, 1C1, 6S26, 2S6, 6S22, Skyway Open, 8N52, 3N22, 7S50, 2N21, 8N37, 2C4, Skyway Open, 6S53, 8C32, 9N59, 3S47, 5N41, 5C27, Skyway Open, 7C15, 9C19, County Line Tree, 3S5, 5C21, 6S32, 3S52, 2S27, 2S10, County Line Open, 8S41, 3N26, 7S23, 2S16, 9C17, 8N38, 2S3, 6C37, 6S19, 2N8, FL2A, 2N48, 8C26, 1N3, 8S18, FL1B, 8S30, 1S12, 6N46, 8N54, 8N34, 2C2, 9C16\n",
       "\n"
      ]
     }
@@ -105,11 +105,18 @@
     "results = qry.all()\n",
     "\n",
     "# Form a nice string for readability\n",
-    "out = ', '.join(row for row in results)\n",
+    "out = ', '.join([row[0] for row in list(results)])\n",
     "\n",
     "# Print it with a line return for readability\n",
-    "print(out + '\\n')\n",
-    "\n",
+    "print(out + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Close your session to avoid hanging transactions\n",
     "session.close()"
    ]
@@ -131,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
