--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f39d8631130>"
+       "<matplotlib.legend.Legend at 0x7f9847281bb0>"
       ]
      },
      "execution_count": 3,
