Removed the thumbnail tags in the raster example that broke its thumbnail in the docs

--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -16,11 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "nbsphinx-thumbnail"
-    ]
-   },
+   "metadata": {},
    "source": [
     "### Step 1. Grab the pit location from the layer data"
    ]
@@ -28,11 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "tags": [
-     "nbsphinx-thumbnail"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from snowxsql.db import get_db\n",
@@ -65,11 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "nbsphinx-thumbnail"
-    ]
-   },
+   "metadata": {},
    "source": [
     "### Step 2. Perform an intersect on all raster tiles with the pit location "
    ]
@@ -77,11 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "tags": [
-     "nbsphinx-thumbnail"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -110,7 +94,8 @@
    "execution_count": 3,
    "metadata": {
     "tags": [
-     "nbsphinx-thumbnail"
+     "nbsphinx-thumbnail",
+     "nbsphinx-gallery"
     ]
    },
    "outputs": [
