Renamed the entire repo and associated files

--- a/docs/gallery/get_spiral_example.ipynb
+++ b/docs/gallery/get_spiral_example.ipynb
@@ -30,9 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import SiteData, PointData\n",
-    "from snowxsql.conversions import points_to_geopandas\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.data import SiteData, PointData\n",
+    "from snowexsql.conversions import points_to_geopandas\n",
     "import geoalchemy2.functions as gfunc\n",
     "import geopandas as gpd\n",
     "\n",
