--- a/docs/gallery/getting_started_example.ipynb
+++ b/docs/gallery/getting_started_example.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Getting Started With Python and Postgresql\n",
-    "This python package (snowxsql) is python package that provides easy access to the entire postgresql database. Here is how you establish a connection:"
+    "This python package (snowexsql) is python package that provides easy access to the entire postgresql database. Here is how you establish a connection:"
    ]
   },
   {
@@ -14,8 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the functions we need from the python snowxsql library\n",
-    "from snowxsql.db import get_db\n",
+    "# Import the functions we need from the python snowexsql library\n",
+    "from snowexsql.db import get_db\n",
     "\n",
     "# If you followed the install instructions the database name should be snowex\n",
     "db_name = 'snowex'\n",
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "### Using the Engine Object\n",
-    "The `engine` object returned from the `get_db` function is not used much in the snowxsql library. It does allow you to use typical SQL \n",
+    "The `engine` object returned from the `get_db` function is not used much in the snowexsql library. It does allow you to use typical SQL \n",
     "strings to interact with the database. \n",
     "\n",
     "**Note**: Users who have used python + SQL before will likely be more familiar with this approach. Additionally those who don't know python but know SQL will also be more comfortable here.\n"
@@ -96,7 +96,7 @@
    ],
    "source": [
     "# Import the table classes from our data module which is where our ORM classes are defined \n",
-    "from  snowxsql.data import SiteData, PointData, LayerData, ImageData\n",
+    "from  snowexsql.data import SiteData, PointData, LayerData, ImageData\n",
     "\n",
     "# Form the query to receive all the site_id from the sites table\n",
     "qry = session.query(SiteData.site_id)\n",
