--- a/docs/gallery/overview_example.ipynb
+++ b/docs/gallery/overview_example.ipynb
@@ -26,9 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import ImageData, LayerData, PointData, SiteData \n",
-    "from snowxsql.conversions import raster_to_rasterio\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.data import ImageData, LayerData, PointData, SiteData \n",
+    "from snowexsql.conversions import raster_to_rasterio\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "from geoalchemy2.types import Raster\n",
