--- a/docs/gallery/plot_pit_swe_example.ipynb
+++ b/docs/gallery/plot_pit_swe_example.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.data import LayerData\n",
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.conversions import query_to_geopandas\n",
+    "from snowexsql.data import LayerData\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.conversions import query_to_geopandas\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "from geoalchemy2.shape import to_shape\n",
