--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import ImageData, LayerData\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.data import ImageData, LayerData\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "import geoalchemy2.functions as gfunc\n",
@@ -36,7 +36,7 @@
     "from rasterio import MemoryFile\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
-    "from snowxsql.conversions import raster_to_rasterio\n",
+    "from snowexsql.conversions import raster_to_rasterio\n",
     "\n",
     "# PIT Site Identifier\n",
     "site_id = '5S31'\n",
