--- a/docs/gallery/raster_union_and_more_example.ipynb
+++ b/docs/gallery/raster_union_and_more_example.ipynb
@@ -32,16 +32,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import ImageData, SiteData\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.data import ImageData, SiteData\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
     "import geoalchemy2.functions as gfunc\n",
     "from geoalchemy2.types import Raster\n",
     "from geoalchemy2.shape import to_shape\n",
     "import geopandas as gpd\n",
-    "from snowxsql.conversions import raster_to_rasterio\n",
-    "from snowxsql.conversions import points_to_geopandas, query_to_geopandas\n",
+    "from snowexsql.conversions import raster_to_rasterio\n",
+    "from snowexsql.conversions import points_to_geopandas, query_to_geopandas\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
