--- a/docs/gallery/compare_SSA_instruments_example.ipynb
+++ b/docs/gallery/compare_SSA_instruments_example.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import LayerData, PointData\n",
-    "from snowxsql.conversions import points_to_geopandas, query_to_geopandas\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.data import LayerData, PointData\n",
+    "from snowexsql.conversions import points_to_geopandas, query_to_geopandas\n",
     "\n",
     "import geoalchemy2.functions as gfunc\n",
     "import geopandas as gpd\n",
