--- a/docs/gallery/compare_UAVSAR_to_depths_example.ipynb
+++ b/docs/gallery/compare_UAVSAR_to_depths_example.ipynb
@@ -24,11 +24,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.data import PointData, ImageData, SiteData \n",
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.conversions import points_to_geopandas, query_to_geopandas, raster_to_rasterio\n",
+    "from snowexsql.data import PointData, ImageData, SiteData \n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.conversions import points_to_geopandas, query_to_geopandas, raster_to_rasterio\n",
     "\n",
-    "from snowxsql.functions import ST_PixelAsPoint\n",
+    "from snowexsql.functions import ST_PixelAsPoint\n",
     "import geoalchemy2.functions as gfunc\n",
     "from geoalchemy2.types import Raster\n",
     "from geoalchemy2.shape import to_shape, from_shape\n",
