--- a/docs/gallery/compare_depth_maps_example.ipynb
+++ b/docs/gallery/compare_depth_maps_example.ipynb
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.data import ImageData, PointData\n",
-    "from snowxsql.conversions import raster_to_rasterio, points_to_geopandas, query_to_geopandas\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.data import ImageData, PointData\n",
+    "from snowexsql.conversions import raster_to_rasterio, points_to_geopandas, query_to_geopandas\n",
     "from matplotlib.image import AxesImage\n",
     "from rasterio.plot import show\n",
     "from sqlalchemy.sql import func\n",
