--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -38,9 +38,9 @@
     }
    ],
    "source": [
-    "from snowxsql.data import LayerData, SiteData\n",
-    "from snowxsql.db import get_db\n",
-    "from snowxsql.conversions import query_to_geopandas\n",
+    "from snowexsql.data import LayerData, SiteData\n",
+    "from snowexsql.db import get_db\n",
+    "from snowexsql.conversions import query_to_geopandas\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
