--- a/docs/gallery/graupel_smp_example.ipynb
+++ b/docs/gallery/graupel_smp_example.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowxsql.data import LayerData, SiteData\n",
-    "from snowxsql.conversions import query_to_geopandas\n",
-    "from snowxsql.db import get_db\n",
+    "from snowexsql.data import LayerData, SiteData\n",
+    "from snowexsql.conversions import query_to_geopandas\n",
+    "from snowexsql.db import get_db\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
