Added the credential update to most of the examples and upload scripts that dont use the batch class

--- a/docs/gallery/compare_SSA_instruments_example.ipynb
+++ b/docs/gallery/compare_SSA_instruments_example.ipynb
@@ -37,8 +37,8 @@
     "import pandas as pd\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'snow:hackweek@localhost/snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
     "\n",
     "# Grab all the equivalent diameter profiles\n",
     "q = session.query(LayerData).filter(LayerData.type == 'specific_surface_area')\n",
