--- a/docs/gallery/compare_UAVSAR_to_depths_example.ipynb
+++ b/docs/gallery/compare_UAVSAR_to_depths_example.ipynb
@@ -45,9 +45,9 @@
     "# Distance around the pit to collect data in meters\n",
     "buffer_dist = 500\n",
     "\n",
-    "# Connect to the database we made.\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "# Connect to the database\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
     "\n",
     "# Grab our pit location by provided site id from the site details table\n",
     "q = session.query(SiteData.geom).filter(SiteData.site_id == site_id)\n",
