--- a/docs/gallery/compare_depth_maps_example.ipynb
+++ b/docs/gallery/compare_depth_maps_example.ipynb
@@ -62,8 +62,9 @@
     "dt = pd.to_datetime('02-01-2020').date()\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
+    "\n",
     "datasets = []\n",
     "\n",
     "# Build a polygon  using the buffer distance \n",
