--- a/docs/gallery/getting_started_example.ipynb
+++ b/docs/gallery/getting_started_example.ipynb
@@ -18,10 +18,10 @@
     "from snowexsql.db import get_db\n",
     "\n",
     "# If you followed the install instructions the database name should be snowex\n",
-    "db_name = 'snowex'\n",
+    "db_name = 'localhost/snowex'\n",
     "\n",
     "# Using the function get_db, we receive 2 ways to interact with the database\n",
-    "engine, session = get_db(db_name)\n"
+    "engine, session = get_db(db_name, credentials='./credentials.json')"
    ]
   },
   {
