--- a/docs/gallery/graupel_pits_example.ipynb
+++ b/docs/gallery/graupel_pits_example.ipynb
@@ -45,8 +45,8 @@
     "import matplotlib.pyplot as plt \n",
     "\n",
     "# Connect to the database\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
     "\n",
     "# Build a query looking at hand hardness profiles, \n",
     "q_base = session.query(LayerData).filter(LayerData.type == 'hand_hardness')\n",
