--- a/docs/gallery/overview_example.ipynb
+++ b/docs/gallery/overview_example.ipynb
@@ -39,8 +39,8 @@
     "from geoalchemy2.shape import from_shape, to_shape\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
     "\n",
     "# DEM data name and surveyor\n",
     "data_name = 'snow off digital elevation model'\n",
