--- a/docs/gallery/graupel_smp_example.ipynb
+++ b/docs/gallery/graupel_smp_example.ipynb
@@ -38,8 +38,8 @@
     "site = '5S21'\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
     "\n",
     "# Query the database looking at SMP profiles at our site\n",
     "q = session.query(LayerData).filter(LayerData.type == 'force').filter(LayerData.site_id==site)\n",
