--- a/docs/gallery/plot_pit_swe_example.ipynb
+++ b/docs/gallery/plot_pit_swe_example.ipynb
@@ -36,8 +36,9 @@
     "import pandas as pd\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
+    "\n",
     "q = session.query(LayerData).filter(LayerData.type == 'density')\n",
     "df = query_to_geopandas(q, engine)\n",
     "\n",
