--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -42,8 +42,9 @@
     "site_id = '5S31'\n",
     "\n",
     "# Connect to the database we made.\n",
-    "db_name = 'snowex'\n",
-    "engine, session = get_db(db_name)\n",
+    "db_name = 'localhost/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
+    "\n",
     "datasets = []\n",
     "\n",
     "# Grab our pit layers by site id\n",
